# CLML

./: .gitignore  UML_IMPLEMENTATION_SUMMARY.md  UML_QUICKSTART.md  UML_README.md  definitions.py  pyproject.toml  train.py
Config/: 1_train_snlive.yaml  2_train_piqa.yaml  3_train_inaturalist.yaml  4_train_vqa.yaml  5_train_sst2.yaml  train_snlive.yaml  uml_train_iNaturalist.yaml  uml_train_piqa.yaml  uml_train_snlive.yaml
Data/: __init__.py  datamodules.py  uml_datamodules.py  uml_helper_datasets.py
Data/language_datasets/: sst2_dataset.py
Data/visionlanguage_datasets/: snlive_dataset.py
Model/: vilt.py  vilt_model.py
Vilt/: model.py  vilt.py
